Добавлено: реализация полной статистики